--- a/hk_morion/src/components/protected_page/Room/Room.css
+++ b/hk_morion/src/components/protected_page/Room/Room.css
@@ -140,6 +140,9 @@
     border-radius: 30px 30px 0 0 ;
     box-shadow: 0 1px 5px 1px rgba(0, 0, 0, 0.25);
 }
+.room-popup[data-isOpen = "firstLoad"]{
+    display: none;
+}
 .room-popup[data-isOpen = "true"]{
     animation: openPopup forwards 1.5s;
 }
